[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/bg_map/Bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/objects/Pause.png" type="Texture" id=3]
[ext_resource path="res://sprites/objects/Pause_press.png" type="Texture" id=4]
[ext_resource path="res://sprites/objects/Sos_off.png" type="Texture" id=5]
[ext_resource path="res://sprites/objects/Sos_of_press.png" type="Texture" id=6]
[ext_resource path="res://sprites/objects/Cash.png" type="Texture" id=7]
[ext_resource path="res://sprites/objects/Cash_press.png" type="Texture" id=8]
[ext_resource path="res://sprites/objects/joia_Big4.png" type="Texture" id=9]
[ext_resource path="res://sprites/objects/joia_Big3.png" type="Texture" id=10]
[ext_resource path="res://sprites/objects/joia_Big2.png" type="Texture" id=11]
[ext_resource path="res://sprites/objects/joia_Big1.png" type="Texture" id=12]
[ext_resource path="res://sprites/objects/joia_Big6.png" type="Texture" id=13]
[ext_resource path="res://sprites/objects/joia_Big5.png" type="Texture" id=14]
[ext_resource path="res://fontes/dotty.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://sprites/gui/bg.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=2]
resource_name = "out"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0784314, 0.203922, 0.392157, 0 ), Color( 0.0784314, 0.203922, 0.392157, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change"
} ]
}

[node name="HUD" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="bg2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="buttons" type="Node2D" parent="."]
editor/display_folded = true

[node name="pause" type="TouchScreenButton" parent="buttons"]
position = Vector2( 11, 6 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="sos" type="TouchScreenButton" parent="buttons"]
position = Vector2( 316, 6 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="coins" type="TouchScreenButton" parent="buttons"]
position = Vector2( 56, 6 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )

[node name="gems" type="Node2D" parent="."]
editor/display_folded = true

[node name="gem0" type="Sprite" parent="gems"]
position = Vector2( 170, 43 )
texture = ExtResource( 9 )

[node name="gem1" type="Sprite" parent="gems"]
position = Vector2( 186, 43 )
texture = ExtResource( 10 )

[node name="gem2" type="Sprite" parent="gems"]
position = Vector2( 202, 43 )
texture = ExtResource( 11 )

[node name="gem3" type="Sprite" parent="gems"]
position = Vector2( 218, 43 )
texture = ExtResource( 12 )

[node name="gem4" type="Sprite" parent="gems"]
position = Vector2( 234, 43 )
texture = ExtResource( 13 )

[node name="gem5" type="Sprite" parent="gems"]
position = Vector2( 250, 43 )
texture = ExtResource( 14 )

[node name="score" type="Label" parent="."]
margin_left = 127.0
margin_top = 4.0
margin_right = 293.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "000"
align = 1
valign = 1

[node name="hulkBuster" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="bg" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0784314, 0.203922, 0.392157, 0 )
z_index = 1
texture = ExtResource( 16 )
centered = false

[node name="anim" type="AnimationPlayer" parent="."]
anims/out = SubResource( 2 )

[connection signal="pressed" from="buttons/pause" to="." method="_on_pause_pressed"]
[connection signal="released" from="buttons/sos" to="." method="_on_sos_released"]
[connection signal="released" from="buttons/coins" to="." method="_on_coins_released"]
[connection signal="timeout" from="hulkBuster" to="." method="_on_hulkBuster_timeout"]
